#99: Use complete path for source files